Remove unused code and correct minor warnings