@@ -25,7 +25,6 @@ import com.thoughtworks.go.domain.StageState;
 import java.sql.Timestamp;
 import java.text.SimpleDateFormat;
 import java.util.Date;
-import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 
@@ -95,9 +94,9 @@ public class StageNotificationDTO {
         private String modifiedTime;
         @Expose
         @SerializedName("data")
-        private HashMap<String, String> data;
+        private Map<String, String> data;
 
-        public ModificationDTO(String revision, Date modifiedTime, HashMap<String, String> data) {
+        public ModificationDTO(String revision, Date modifiedTime, Map<String, String> data) {
             this.revision = revision;
             this.modifiedTime = dateToString(modifiedTime);
             this.data = data;
@@ -135,7 +134,7 @@ public class StageNotificationDTO {
 
         public StageDTO(String name, int counter, String approvalType, String approvedBy, StageState state, StageResult result, Timestamp createTime, Timestamp lastTransitionTime, List<JobDTO> jobs) {
             this.name = name;
-            this.counter = new Integer(counter).toString();
+            this.counter = Integer.valueOf(counter).toString();
             this.approvalType = approvalType;
             this.approvedBy = approvedBy;
             this.state = state.toString();
